# Solving-MOLP

./: .coverage  FuzzyOrderings.py  FuzzyPartitions.py  MembershipFunctions.py  README.md  SolveMolp.py  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
Test/: test_SolveMolp.py
src/SolveMolp/: FuzzyOrderings.py  Optimeze.py
src/SolveMolp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
